src/test/deca/syntax/invalid/created/elsebeforeif.deca
//elsebeforeif.deca:3:4: mismatched input 'else' expecting {'if', 'new', 'null', 'readInt', 'readFloat', 'return', 'this', 'println', 'printlnx', 'print', 'printx', 'false', 'true', 'while', '(', ';', '}', '!', '-', FLOAT, INT, IDENT, STRING
{
    else{

    }
}